# puzzleboy

./: .gitignore  .travis.yml  README.md
PuzzleBoy/: AndroidManifest.xml  ArgumentManager.cpp  ArgumentManager.h  CMakeLists.txt  ChooseLevelScreen.cpp  ChooseLevelScreen.h  ConfigScreen.cpp  ConfigScreen.h  FileSystem.cpp  FileSystem.h  GNUGetText.cpp  GNUGetText.h  LevelDatabaseScreen.cpp  LevelDatabaseScreen.h  LevelRecordScreen.cpp  LevelRecordScreen.h  Level_PathFinding.cpp  MFCSerializer.cpp  MFCSerializer.h  MT19937.cpp  MT19937.h  MainMenuScreen.cpp  MainMenuScreen.h  MultiTouchManager.cpp  MultiTouchManager.h  MyFormat.cpp  MyFormat.h  MySerializer.cpp  MySerializer.h  NetworkManager.cpp  NetworkManager.h  PooledAllocator.h  PushableBlock.cpp  PushableBlock.h  PuzzleBoy-debug.apk  PuzzleBoy.7z  PuzzleBoy.sln  PuzzleBoy.vcproj  PuzzleBoyApp.cpp  PuzzleBoyApp.h  (+61 more)
PuzzleBoy/cmake/Modules/: FindOpenGLES.cmake
PuzzleBoy/data/levels/: Crazy_Monk.lev  GRIGoRusha.lev  Haywood.lev  Holland.lev  PuzzleBoy.lev  Test.lev  YASGen.lev  Yoshio.lev  erim_multi.lev  list.txt  lks.lev
PuzzleBoy/data/locale/: PuzzleBoy.pot  de_DE.mo  de_DE.po  list.txt  zh_CN.mo  zh_CN.po
PuzzleBoy/data/tmp/: PuzzleBoy3.lev  Sladkey.lev  Test.lev  alfred_multi.lev  lks.lev  svenmult.lev
PuzzleBoy/jni/: Readme.txt
PuzzleBoy/jni/src/: Android.mk
PuzzleBoy/res/values/: strings.xml
PuzzleBoy/src/com/googlecode/puzzleboy/: PuzzleBoy.java
PuzzleBoy/src/org/libsdl/app/: SDLActivity.java
PuzzleBoy/tmp/: SDL_android.c  adhoc.psd
mfccourse/: ChildFrm.cpp  Level.cpp  Level.h  LevelDatabase.cpp  LevelDatabase.h  LevelFinished.cpp  LevelFinished.h  LevelList.cpp  LevelList.h  LevelProperties.cpp  LevelProperties.h  LevelRecord.cpp  LevelRecord.h  LevelUndo.cpp  LevelUndo.h  Level_PathFinding.cpp  MainFrm.cpp  MainFrm.h  MySerializer.cpp  MySerializer.h  PushableBlock.cpp  PushableBlock.h  PuzzleBoy2.lev  PuzzleBoyTimedMode.lev  ReadMe.txt  RecordManager.cpp  RecordManager.h  lks.lev  mfccourse.7z  mfccourse.cpp  mfccourse.h  mfccourse.rc  mfccourse.sln  mfccourse.vcproj  mfccourseDoc.cpp  mfccourseDoc.h  mfccourseView.cpp  mfccourseView.h  record file format.txt  resource.h  (+5 more)
mfccourse/Sokofan/: erim_multi.txt  svenmult.txt
mfccourse/WinSoko/: WinSoko.lev
mfccourse/YASC/: Crazy_Monk.sok  GRIGoRusha.sok  Haywood.sok  Holland.sok  Skinner.lev  Skinner.sok  Sladkey.sok  YASGen.sok  Yoshio.sok  du_Peloux.lev  du_Peloux.sok
mfccourse/res/: mfccourse.rc2
